# tensor-ready-workshop

./: .env.example  .gitignore  LICENSE  README.md  app.py  exemple.ipynb  main.py  paths.py  pyproject.toml  requirements.txt
Module1-project/: main.py  paths.py
Module1-project/api/: main.py
Module1-project/config/: prompt_config.yaml
Module1-project/prompts/: technical.yaml
Module1-project/src/: config_loader.py  document_processor.py  embedding_manager.py  prompt_manager.py  rag_system.py  vector_store.py
Module1-project/tests/: test_prompt_manager.py
Module1_project/: main.py
Module1_project/api/: main.py  schemas.py
Module1_project/app/: streamlit_app.py  utils.py
Module1_project/data/: test2.py
Module1_project/prompts/: cot.yaml  default.yaml  react.yaml  selfask.yaml
Module1_project/src/: __init__.py  config_loader.py  document_processor.py  prompt_manager.py  rag_system.py  similarity_tester.py
Module1_project/tests/: similarity_tester.py  test_similarity.py
api/: __init__.py  main.py  schemas.py
app/: __init__.py  streamlit_app.py  style.css  utils.py
config/: prompts.py  prompts.yaml  settings.py  settings.yaml
src/: __init__.py  data_loader.py  document_processing.py  embedding_manager.py  memory.py  prompt_manager.py  rag_system.py  utils.py
